<resources>
    <string name="app_name">HealthyDinningApp</string>

    <!-- Strings related to login activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_user">No account yet? Create one</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_main_page">主界面</string>
    <string name="navigation_discover">发现</string>
    <string name="navigation_service">服务</string>
    <string name="navigation_user_profile">用户设置</string>
    <string name="navigation_share">分享</string>
    <string name="navigation_forward">转发</string>
    ß
    <!-- Strings related to Main Page -->
    <string name="user_name">姓名</string>
    <string name="daily_gain_calories">当日摄入卡路里</string>
    <string name="nutrition_status">营养动态</string>
    <string name="health_exam">健康检测</string>
    <string name="health_report">健康报告</string>
    <string name="total_exercise">运动量</string>
    <string name="more_features">更多</string>
    <string name="nutrition_gain">营养摄入量</string>
    <string name="nutrition_benefit">营养惠</string>
    <string name="customers_info">商家信息</string>

    <!-- Strings related to user information -->
    <string name="profile_photo">Profile Photo</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="phone_country_code">Phone country code</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zip</string>
    <string name="action_sign_up">Sign up</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="sex">性别</string>
    <string name="confirm">确定</string>
    <string name="bmi">体脂</string>


    <string name="user_basic_data">个人基础数据</string>
    <string name="age">年龄</string>
    <string name="user_familial_disease">家庭病史</string>
    <string name="user_body_data">个人身体活动数据</string>

    <string name="decrease"><![CDATA[<]]></string>
    <string name="increase"><![CDATA[>]]></string>
    <string name="zero">0</string>
</resources>
