<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.healthyinc.healthydinningapp.MainPageFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/daily_summary_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_user_name"
                    style="@style/TextViewTheme"
                    android:text="@string/user_name" />

                <TextView
                    android:id="@+id/main_daily_calories"
                    style="@style/TextViewTheme"
                    android:hint="@string/daily_gain_calories"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/features_group_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/main_nutrition_status"
                        style="@style/TextViewTheme"
                        android:text="@string/nutrition_status" />

                    <TextView
                        android:id="@+id/main_health_exam"
                        style="@style/TextViewTheme"
                        android:text="@string/health_exam" />

                    <TextView
                        android:id="@+id/main_health_report"
                        style="@style/TextViewTheme"
                        android:text="@string/health_report" />

                    <TextView
                        android:id="@+id/main_total_exercise"
                        style="@style/TextViewTheme"
                        android:text="@string/total_exercise" />

                    <TextView
                        android:id="@+id/main_more_features"
                        style="@style/TextViewTheme"
                        android:text="@string/more_features" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/extra_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_nutrition_gain"
                    style="@style/TextViewTheme"
                    android:text="@string/nutrition_gain" />

                <TextView
                    android:id="@+id/main_extra"
                    style="@style/TextViewTheme"
                    android:text="Extra..." />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/benefit_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_nutrition_benefit"
                    style="@style/TextViewTheme"
                    android:text="@string/nutrition_benefit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/customers_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/main_customer_info_one"
                    style="@style/TextViewTheme"
                    android:text="@string/customers_info" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>