<?xml version="1.0" encoding="utf-8"?>
<com.dexafree.materialList.card.CardLayout
    style="@style/MainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/Material_Card_View"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_nutrition_status"
                    style="@style/UserProfileTextViewTheme"
                    android:text="@string/nutrition_status"/>
                <TextView
                    android:id="@+id/tv_health_exam"
                    style="@style/UserProfileTextViewTheme"
                    android:text="@string/health_exam"/>
                <TextView
                    android:id="@+id/tv_health_report"
                    style="@style/UserProfileTextViewTheme"
                    android:text="@string/health_report"/>
                <TextView
                    android:id="@+id/tv_total_exercise"
                    style="@style/UserProfileTextViewTheme"
                    android:text="@string/total_exercise"/>
                <TextView
                    android:id="@+id/tv_more_features"
                    style="@style/UserProfileTextViewTheme"
                    android:text="@string/more_features"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_nutrition_gain"
                    style="@style/UserProfileTextViewTheme"
                    android:text="@string/nutrition_gain"/>
                <TextView
                    android:id="@+id/tv_unkown"
                    style="@style/UserProfileTextViewTheme"
                    android:text="unkown"/>

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>
    </android.support.v7.widget.CardView>

</com.dexafree.materialList.card.CardLayout>