<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.features.HealthDetectionFragment">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="35dp"
            android:text="@string/health_exam"/>

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.txusballesteros.widgets.FitChart
            style="@style/chart_style"
            android:layout_gravity="center"
            app:animationMode="overdraw"
            android:id="@+id/fitChart" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:gravity="center"/>
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:maxWidth="200dp"-->
                <!--android:textSize="15sp"-->
                <!--android:textColor="#757575"-->
                <!--android:gravity="center"-->
                <!--android:text="Your goal is 10.000 steps." />-->

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_user_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/height"/>

        <TextView
            android:id="@+id/tv_user_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/weight"/>

        <TextView
            android:id="@+id/tv_user_bmi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bmi"/>

    </LinearLayout>

</LinearLayout>