<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="膳食营养素录入"/>

        <noman.weekcalendar.WeekCalendar
            android:id="@+id/weekCalendar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="序号   食物名称   能量    质量    更多"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@color/background_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="1  土豆丝  200kml   100g"
                    android:textColor="@color/text"
                    android:textSize="15sp" />


                <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
                    android:id="@+id/progress_one"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    app:rcIconSize="30dp"
                    app:rcMax="100"
                    app:rcProgress="5" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_progress_one_decrease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decrease"
                        android:textColor="@color/text"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tv_progress_one"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@color/text"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/button_progress_one_increase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/increase"
                        android:textColor="@color/text"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:background="@color/background_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:text="1  馒头  100kml   200g"
                    android:textColor="@color/text"
                    android:textSize="15sp" />


                <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
                    android:id="@+id/progress_one"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    app:rcIconSize="30dp"
                    app:rcMax="100"
                    app:rcProgress="5" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_progress_one_decrease"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/decrease"
                        android:textColor="@color/text"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tv_progress_one"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/zero"
                        android:textColor="@color/text"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/button_progress_one_increase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/increase"
                        android:textColor="@color/text"
                        android:textSize="10sp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>